--- a/styles/Blog.css
+++ b/styles/Blog.css
@@ -16,8 +16,8 @@
     padding: 0;
     max-width: 127px;
     justify-content: space-between;
-    margin-top: 15px;
-    margin-bottom: 32.5px;
+    margin-top: 16px;
+    margin-bottom: 32px;
 }
 .breadcrumbs__list-item:not(:last-child)::after {
     display: inline-block;
@@ -57,6 +57,14 @@
     padding: 0;
     justify-content: space-between;
 }
+.blog__title {
+    opacity: 0;
+    position: absolute;
+    padding: 0;
+    margin: 0;
+    top: 0;
+    left: 0;
+}
 .blog__list-item {
     display: flex;
     flex-direction: column;
@@ -67,7 +75,6 @@
     font-size: 16px;
     color: #818181;
     margin-top: 22px;
-
 }
 
 .blog__list_desc {
@@ -75,7 +82,7 @@
     font-weight: 700;
     font-size: 24px;
     color: #1E0606;
-    margin-top: -7px;
+    margin-top: -8px;
     line-height: 31px;
 }
 .blog__list-title {
@@ -93,8 +100,9 @@
     font-family: 'Open Sans', sans-serif;
     font-size: 18px;
     line-height: 25px;
-    margin-top: 14.5px;
-    margin-bottom: 35px;
+    margin-top: 15px;
+    margin-bottom: 34.5px;
+    letter-spacing: 0.07px;
 }
 
 
@@ -114,7 +122,7 @@
     width: 37px;
     height: 37px;
     padding: 0;
-    margin-top: 20px;
+    margin-top: 21.5px;
     margin-right: 5px;
 }
 .blog__click-btn {
