--- a/styles/Catalog.css
+++ b/styles/Catalog.css
@@ -62,6 +62,14 @@ button:disabled {background-color:#C7C1C1;}
     flex-direction: column;
     justify-content:space-between;
 }
+.block__services-title {
+    opacity: 0;
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    top: 0;
+    left: 0;
+}
 /* верхний блок с каталогом */
 .block__services-list {
     display: flex;
@@ -70,6 +78,7 @@ button:disabled {background-color:#C7C1C1;}
     padding: 0;
     margin-top: 17px;
 }
+
 /* нижний блок с каталогом */
 .block__services-aside {
     display: flex;
@@ -77,7 +86,7 @@ button:disabled {background-color:#C7C1C1;}
     align-items: center;
     padding: 0;
     margin-right: 100px;
-    margin-top: 6px;
+    margin-top: 7px;
 }
     /* список картинок */
 .block__services-item {
@@ -86,28 +95,26 @@ button:disabled {background-color:#C7C1C1;}
     align-items: center;
     position: relative;
     min-width: 280px;
+    height: 270px;
 }
     /* фон картинок */
-.block__services-sweater {background-color: #DBE4DB;}
-.block__services-sock {background-color: #EADDD3;}
-.block__services-deer {background-color: #F8F2DA;}
-.block__services-yeti {background-color: #D5D4E1;}
-.block__services-flamingos {background-color: #F3D0DB;}
-.block__services-dress {background-color: #E5EAF8;}
-    /* подгон картинок */
-.block__services-sock {
+.block__services-sweater-item {background-color: #DBE4DB;}
+.block__services-sock-item {background-color: #EADDD3;}
+.block__services-deer-item {background-color: #F8F2DA;}
+.block__services-yeti-item {background-color: #D5D4E1;}
+.block__services-flamingos-item {background-color: #F3D0DB;}
+.block__services-dress-item {background-color: #E5EAF8;}
+
+
+/* подгон картинок */
+.block__services-sock-item {
     margin: 0 20px;
-    padding: 7px 0;
 }
-.block__services-yeti {
-    padding: 10px 20px;
-}
-.block__services-flamingos {
-    margin: 0 20px 0 20px;
-    padding: 0;
+.block__services-flamingos-item {
+    margin: 0 20px;
 }
 .block__services-link-dress {
-    margin-left: -7px;
+    margin-left: -3px;
 }
      /* текст в картинке */
 .block__services-link {
@@ -134,11 +141,12 @@ button:disabled {background-color:#C7C1C1;}
     flex-direction: column;
     max-width: 680px;
     padding:0 100px 39px 0;
-    margin-top: -1px;
+    margin-top: 0px;
 }
 /* Подзаголовок */
 .block__desc-subtitle {
     font-family: 'Montserrat',sans-serif;
+    font-weight: 700px;
     font-size: 38px;
     padding-top: 10px;
 }
@@ -147,8 +155,9 @@ button:disabled {background-color:#C7C1C1;}
     font-size: 16px;
 }
 .block__desc-text-one {
-    margin: -4px 0 0 1px;
-    line-height: 22px;    
+    margin: -4px 0 0 0;
+    line-height: 22px;
+    letter-spacing: 0.04px;    
 }
 .block__desc-text-two {
     margin: 15px 0 0 1px;
