--- a/styles/index.css
+++ b/styles/index.css
@@ -458,21 +458,32 @@ h2 {font-family:'Montserrat', sans-serif;}
 
 /* Модальное окно */
 .modalWindow {
-    display: flex;
-    position: relative;
-    justify-content: center;
-    background-color: #7D97DACC;
-    margin-top: -3000px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background: #7d97dacc;
 }
 .hidden {
     display: none;
+
 }
 .modalWindow__form {
+    position: fixed;
+    top: 15%;
+    left: 30%;
+    right: 0;
+    margin: 0;
     display: flex;
-    position: relative;
-    background-color: #E5EAF8;
-    min-width: 680px;
-    margin: 113px auto;
+    justify-content: center;
+    align-items: center;
+    width: 680px;
+    min-height: 542px;
+    z-index: 1;
+    background: #E5EAF8;
 }
 .modalWindow__closeBtn {
     position: absolute;
@@ -505,7 +516,6 @@ h2 {font-family:'Montserrat', sans-serif;}
     max-width: 600px;
     display: flex;
     flex-direction: column;
-    margin-left: 40px;
 }
 
 .modalWindow__form-label {
