--- a/styles/toys.css
+++ b/styles/toys.css
@@ -76,32 +76,12 @@ button:disabled {background-color:#C7C1C1;}
     height: 4px;
     margin: 22px 0 18px 4px;
     -webkit-appearance: none;
-    -moz-appearance: none;
     appearance: none;
     background: #000;
     outline: none;
     border-radius: none;
 }
 .div__form-slider::-webkit-slider-thumb {
-    appearance: none;
-    width: 24px;
-    height: 24px;
-    border-radius: 12px;
-    background: #fff;
-    border: 9px solid #C29974;
-    box-shadow: -95px 0  72px #C29974;
-}
-.div__form-slider::-moz-range-thumb {
-    appearance: none;
-    width: 24px;
-    height: 24px;
-    border-radius: 12px;
-    background: #fff;
-    border: 9px solid #C29974;
-    box-shadow: -95px 0  72px #C29974;
-    border: 0;
-}
-/* .div__form-slider::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
     margin-top: -10px;
@@ -121,15 +101,16 @@ button:disabled {background-color:#C7C1C1;}
     border: 9px solid #C29974;
     margin-top: -10px;
 }
-.div__form-slider::-webkit-slider-runnable-track {
-    -webkit-appearance: none;
-    appearance: none;
-    background: #000;
+input[type=range].div__form-slider::-webkit-slider-runnable-track {
     height: 4px;
+    border: none;
+    border-radius: 0;
+    background: #000;
+    box-shadow: none;
 }
-.div__form-slider:active::-webkit-slider-runnable-track {
-    background: #C29974;
-} */
+input[type=range].div__form-slider.slider-progress::-webkit-slider-runnable-track {
+    background: linear-gradient(#C29974,#C29974) 0/var(--sx) 100% no-repeat, #000;
+}
 
 .div__form-numbers {
     display: flex;
