--- a/styles/toys.css
+++ b/styles/toys.css
@@ -180,30 +180,42 @@ input[type=range]::-webkit-slider-runnable-track  {
 
 /* Блок с выбором */
 .div__form-wrap {
-    display: flex;
-    flex-direction: column;
-    margin-left: 70px;
+    margin-left: 69px;
+    margin-right: 70px;
 }
-.div__form-list {
-    display: flex;
-    padding: 10px;
-    margin: 2px 60px 0 -10px;
-    min-width: 240px;
+.div__form-group {
+	display: flex;
+    margin-top: 18px;
 }
-.div__form-button {
-    border: none;
-    padding: 8px 19.5px;
-    background-color: #fff;
+.div__form-item {
+min-width: 80px;
 }
-.div__form-activ {
-    padding: 8px 27px;
+.div__form-input {
+	display: none;
 }
-.div__form-button:hover {
-    background-color: #EDDEEB;
+.div__form-desc {
+	display: flex;
+    justify-content: center;
+    font-family: 'Open Sans', Arial, sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+	cursor: pointer;
+	padding: 0px 15px;
+	line-height: 34px;
+	user-select: none;
 }
-.div__form-button:focus {
-    background-color: #F3D0DB;
+
+.div__form-group {
+    background: #fff;
 }
+.div__form-input:checked + .div__form-desc {
+	background: #F3D0DB;
+}
+.div__form-desc:hover {
+	background: #EDDEEB;
+}
+
+
  /* Кнопка */
 .div__form-pic {
     background-color: #000;
